force-app/main/default/objects/Branch__c/Branch__c.object-meta.xml
<CustomObject>
    <description>지역별 판매점</description>
    <label>판매점</label>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>