force-app/main/default/objects/Branch__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>도시명</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seoul</fullName>
            </value>
            <value>
                <fullName>Busan</fullName>
            </value>
            <value>
                <fullName>Daegu</fullName>
            </value>
            <value>
                <fullName>Incheon</fullName>
            </value>
            <value>
                <fullName>Gwangju</fullName>
            </value>
            <value>
                <fullName>Daejeon</fullName>
            </value>
            <value>
                <fullName>Ulsan</fullName>
            </value>
            <value>
                <fullName>Sejong</fullName>
            </value>
            <value>
                <fullName>광주광역시</fullName>
                <isActive>false</isActive>
                <label>광주광역시</label>
            </value>
            <value>
                <fullName>대구광역시</fullName>
                <isActive>false</isActive>
                <label>대구광역시</label>
            </value>
            <value>
                <fullName>대전광역시</fullName>
                <isActive>false</isActive>
                <label>대전광역시</label>
            </value>
            <value>
                <fullName>부산광역시</fullName>
                <isActive>false</isActive>
                <label>부산광역시</label>
            </value>
            <value>
                <fullName>서울특별시</fullName>
                <isActive>false</isActive>
                <label>서울특별시</label>
            </value>
            <value>
                <fullName>세종특별자치시</fullName>
                <isActive>false</isActive>
                <label>세종특별자치시</label>
            </value>
            <value>
                <fullName>울산광역시</fullName>
                <isActive>false</isActive>
                <label>울산광역시</label>
            </value>
            <value>
                <fullName>인천광역시</fullName>
                <isActive>false</isActive>
                <label>인천광역시</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>