force-app/main/default/objects/Branch__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>국가명</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SouthKorea</fullName>
            </value>
            <value>
                <fullName>I2maxCountry</fullName>
            </value>
            <value>
                <fullName>SalesforceCountry</fullName>
            </value>
            <value>
                <fullName>대한민국</fullName>
                <isActive>false</isActive>
                <label>대한민국</label>
            </value>
            <value>
                <fullName>세일즈포스국</fullName>
                <isActive>false</isActive>
                <label>세일즈포스국</label>
            </value>
            <value>
                <fullName>아이투맥스국</fullName>
                <isActive>false</isActive>
                <label>아이투맥스국</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>