force-app/main/default/objects/Branch__c/fields/CustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerNumber__c</fullName>
    <label>고객 수</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>