force-app/main/default/objects/Branch__c/fields/SalesRep__c.field-meta.xml
<CustomField>
    <fullName>SalesRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>판매사원</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>판매사원</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>SalesRepngBA</relationshipName>
    <type>Lookup</type>
</CustomField>