force-app/main/default/objects/Branch__c/fields/wido__c.field-meta.xml
<CustomField>
    <fullName>wido__c</fullName>
    <label>위도경도</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>